--- a/ind.css
+++ b/ind.css
@@ -1,6 +1,6 @@
-/* body {
+body {
     cursor: url(https://mcdindia.com/wp-content/uploads/2020/11/mc-cursor-2.png),auto;
-} */
+}
 
 .main{
     background-color: #f3bc2f;
